ADD webapp fixed layout + STYLE bg-app

--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
     <title>Boolzap</title>
 
 </head>
-<body class="dark-theme">
-    <div id="app" class="todolist">
+<body class="body">
+
+    <div id="app" class="boolzap container my-5">
+
+        
 
     </div>
-
 
     <script src="./js/app.js"></script>
 </body>
