ADD user profile + notification section static detailing added

--- a/index.html
+++ b/index.html
@@ -20,12 +20,44 @@
         <div class="row">
             <div class="boolzap__navbar col-4 d-flex flex-column">
                 
-                <div class="user-bar flex-shrink-0">
-                    user
+                <div class="user-bar flex-shrink-0 d-flex align-items-center">
+
+                    <div class="user-bar__profile d-flex align-items-center flex-grow-1 px-2">
+                        <div class="profile__img">
+                            <img src="./assets/woman1.png" alt="">
+                        </div>
+                        <div class="profile__name fw-bold">
+                            Sofia
+                        </div>
+                    </div>
+
+                    <div class="user-bar__options d-flex">
+                        <div class="status__option px-2">
+                            <i class="fa-solid fa-circle-notch"></i>
+                        </div>
+                        <div class="message__option px-2">
+                            <i class="fa-solid fa-message"></i>
+                        </div>
+                        <div class="more__option px-2">
+                            <i class="fa-solid fa-ellipsis-vertical"></i>
+                        </div>
+                    </div>
                 </div>
 
-                <div class="notification-banner flex-shrink-0">
-                    notifications
+                <div class="notification-banner flex-shrink-0 d-flex justify-content-center align-items-center">
+                    <div class="notification__container d-flex align-items-center flex-grow-1 px-2">
+                        <div class="notification__icon d-flex justify-content-center align-items-center me-2">
+                            <i class="fa-solid fa-bell-slash"></i>
+                        </div>
+                        <div class="notification__info">
+                            <div class="notification__text fw-bold">
+                                Ricevi notifiche dei tuoi messaggi
+                            </div>
+                            <div class="notification__link">
+                                <a href="#">Attiva modifiche desktop</a> 
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="search-bar flex-shrink-0">
@@ -42,8 +74,34 @@
 
             <div class="boolzap__chat col d-flex flex-column">
                 
-                <div class="user-bar flex-shrink-0">
-                    receiver
+                <div class="user-bar flex-shrink-0 d-flex align-items-center">
+
+                    <div class="user-bar__profile d-flex align-items-center flex-grow-1 px-2">
+                        <div class="profile__img">
+                            <img src="./assets/woman1.png" alt="">
+                        </div>
+                        <div class="profile__name">
+                            <div class="receiver__name fw-bold">
+                                Michele
+                            </div>
+                            <div class="receiver__info">
+                                placeholder...
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="user-bar__options d-flex">
+                        <div class="search__option px-2">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                        </div>
+                        <div class="attach__option px-2">
+                            <i class="fa-solid fa-paperclip"></i>
+                        </div>
+                        <div class="more__option px-2">
+                            <i class="fa-solid fa-ellipsis-vertical"></i>
+                        </div>
+                    </div>
+
                 </div>
 
                 <div class="chat-view flex-grow-1 overflow-y-scroll">
