--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
 </head>
 <body class="body">
 
-    <div id="app" class="boolzap container my-5 overflow-hidden">
+    <div id="app" class="boolzap container my-5 overflow-hidden p-0">
 
-        <div class="row">
+        <div class="row g-0">
             <div class="boolzap__navbar col-4 d-flex flex-column">
                 
+                <!-- current user section -->
                 <div class="user-bar flex-shrink-0 d-flex align-items-center">
 
                     <div class="user-bar__profile d-flex align-items-center flex-grow-1 px-2">
@@ -44,6 +45,7 @@
                     </div>
                 </div>
 
+                <!-- notification section -->
                 <div class="notification-banner flex-shrink-0 d-flex justify-content-center align-items-center">
                     <div class="notification__container d-flex align-items-center flex-grow-1 px-2">
                         <div class="notification__icon d-flex justify-content-center align-items-center me-2">
@@ -60,10 +62,15 @@
                     </div>
                 </div>
 
-                <div class="search-bar flex-shrink-0">
-                    search...
+                <!-- search section -->
+                <div class="search-bar flex-shrink-0 d-flex .align-items-stretch p-2">
+                    <span class="input-group-text" id="basic-addon1">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </span>
+                    <input type="text" class="form-control" placeholder="cerca un amico..." aria-label="Username" aria-describedby="basic-addon1">
                 </div>
 
+                <!-- chat-preview section -->
                 <div class="chat__navbar flex-grow-1 overflow-y-scroll">
                     receivers
                 </div>
@@ -108,8 +115,16 @@
                     chat preview
                 </div>
 
-                <div class="chat-input flex-shrink-0">
-                    input here...
+                <div class="chat-input flex-shrink-0 d-flex align-items-center p-2">
+                    <div class="lateral__icon d-flex justify-content-center align-items-center">
+                        <i class="fa-regular fa-face-smile"></i>
+                    </div>
+
+                    <input type="text" class="form-control flex-grow-1" id="chatInput" placeholder="inserisci il testo qui...">
+
+                    <div class="lateral__icon d-flex justify-content-center align-items-center">
+                        <i class="fa-solid fa-microphone"></i>
+                    </div>
                 </div>
 
             </div>
