ADD statis message layout detailed completed

--- a/index.html
+++ b/index.html
@@ -134,7 +134,38 @@
                 </div>
 
                 <div class="chat-view flex-grow-1 overflow-y-scroll">
-                    chat preview
+
+                    <!-- prototype -->
+                    <div class="messages-container">
+                        <div class="message__cloud sent__message">
+                            <div class="message__text">
+                                Lorem ipsum dolor sit amet.
+
+                            </div>
+                            <div class="message__time">
+                                12:00
+                            </div>
+                            <div class="message__option">
+                                <i class="fa-solid fa-chevron-down"></i>
+                            </div>
+                        </div>
+
+                        <div class="message__cloud received__message">
+                            <div class="message__text">
+                                Lorem ipsum dolor sit amet.
+
+                            </div>
+                            <div class="message__time">
+                                12:00
+                            </div>
+                            <div class="message__option">
+                                <i class="fa-solid fa-chevron-down"></i>
+                            </div>
+                        </div>
+
+                    </div>
+                    <!-- prototype end -->
+
                 </div>
 
                 <div class="chat-input flex-shrink-0 d-flex align-items-center p-2">
