--- a/index.html
+++ b/index.html
@@ -69,7 +69,11 @@
                     <span class="input-group-text" id="basic-addon1">
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </span>
-                    <input type="text" class="form-control" placeholder="cerca un amico..." aria-label="Username" aria-describedby="basic-addon1">
+                    <input 
+                    type="text" class="form-control" placeholder="cerca un amico..." aria-label="Username" aria-describedby="basic-addon1"
+                    v-model="searchInput" 
+                    @keyup="getFilteredContactList()" 
+                    >
                 </div>
 
                 <!-- chat-preview section -->
