--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <title>Boolzap</title>
 
 </head>
-<body class="body" id="app">
+<body class="body">
 
-    <div class="boolzap container my-5 overflow-hidden p-0">
+    <div id="app" class="boolzap container my-5 overflow-hidden p-0">
 
-        <div class="row g-0">
+        <div class="row g-0"> 
 
             <!-- sidebar lato sx -->
             <div class="boolzap__navbar col-4 d-flex flex-column">
@@ -177,9 +177,18 @@
                             </div>
                             <div class="message__time">
                                 12:00
-                            </div>
-                            <div class="message__option">
                                 <i class="fa-solid fa-chevron-down"></i>
+                            </div>
+                            <div class="dropdown">
+                                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Dropdown link
+                                </a>
+                              
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="#">Action</a></li>
+                                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                </ul>
                             </div>
                         </div>
 
@@ -194,14 +203,15 @@
                             <div class="message__option">
                                 <i class="fa-solid fa-chevron-down"></i>
                             </div>
-                        </div>
+                        </div> -->
 
-                    </div> -->
+                    </div>
                     <!-- prototype end -->
 
                 </div>
 
             </div>
+        
         </div>
 
     </div>
