--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
 
                     <div class="user-bar__profile d-flex align-items-center flex-grow-1 px-2">
                         <div class="profile__img">
-                            <img src="./assets/man1.png" alt="">
+                            <img :src="contactsList[activeContact].avatar" alt="">
                         </div>
                         <div class="profile__name">
                             <div class="receiver__name fw-bold">
-                                Michele
+                                {{ contactsList[activeContact].name }}
                             </div>
                             <div class="receiver__info">
                                 Ultimo accesso oggi alle 12:00
@@ -167,7 +167,7 @@
                 <div class="chat-view flex-grow-1 overflow-y-scroll">
                         
                     <!-- prototype -->
-                    <div class="messages-container d-flex flex-column justify-content-end">
+                    <div class="messages-container d-flex flex-column">
 
                         <div 
                         :class="['message__cloud', item.status === 'sent' ? 'sent__message' : 'received__message']"
@@ -178,7 +178,6 @@
                             </div>
                             <div class="message__time">
                                 12:00
-                                
                             </div>
                             <div class="message__option">
                                 <i class="fa-solid fa-chevron-down"></i>
