--- a/index.html
+++ b/index.html
@@ -185,9 +185,18 @@
                             <div class="message__time">
                                 12:00
                             </div>
-                            <div class="message__option">
+                            <div 
+                            class="message__option"
+                            @click="setActiveOption(i)"
+                            >
                                 <i class="fa-solid fa-chevron-down"></i>
                             </div>
+                            <ul 
+                            :class="['message__menu', activeOption === i ? 'd-block' : 'd-none']"
+                            >
+                                <li>Info</li>
+                                <li>Delete</li>
+                            </ul>
                         </div>
 
                         <!-- <div class="message__cloud received__message">
@@ -214,6 +223,7 @@
 
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="./js/app.js"></script>
 </body>
 </html>
