--- a/index.html
+++ b/index.html
@@ -179,12 +179,19 @@
                         :class="['message__cloud', item.status === 'sent' ? 'sent__message' : 'received__message']"
                         v-for="(item, i) in [...contactsList[activeContact].messages]"
                         >
+
+                            <div class="message__layer">
+
+                            </div>
+                            
                             <div class="message__text">
                                 {{ item.message }}
                             </div>
                             <div class="message__time">
                                 12:00
                             </div>
+
+                            <!-- option menu -->
                             <div 
                             class="message__option"
                             @click="setActiveOption(i)"
@@ -196,6 +203,20 @@
                             >
                                 <li>Info</li>
                                 <li @click="deleteMessage(i)">Delete</li>
+                            </ul>
+
+                            <!-- emoji menu -->
+                            <div 
+                            class="emoji__option"
+                            @click="setActiveLike(i)"
+                            >
+                                <i class="fa-solid fa-face-smile"></i>
+                            </div>
+                            <ul 
+                            :class="['emoji__menu', activeLike === i ? 'd-flex' : 'd-none']"
+                            >
+                                <li class="py-1"><i class="fa-solid fa-heart"></i></li>
+                                <li class="py-1"><i class="fa-solid fa-heart-crack"></i></li>
                             </ul>
                         </div>
 
